Move settings to admin dropdown

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -393,3 +393,19 @@ li a {
 .dropdown-item.active, .dropdown-item:active {
   background-color: #1E5A96;
 }
+
+.link-new-tab {
+  color: #ffffff;
+}
+
+.link-new-tab:hover {
+  color: #ffffff;
+}
+
+.link-new-tab-footer {
+  color: #325c9e;
+}
+
+.link-new-tab-footer:hover {
+  color: #325c9e;
+}
