--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -9,9 +9,11 @@
       </pzsh-footer-link>
     </a>
 
-    <pzsh-footer-link href="https://github.com/puzzle/cryptopus">
-      <pzsh-icon name="github"></pzsh-icon>
-      {{t "contribute_on_github"}}
+    <pzsh-footer-link>
+      <a class="link-new-tab-footer" href="https://github.com/puzzle/cryptopus" target="_blank" rel="noreferrer noopener">
+        <pzsh-icon name="github"></pzsh-icon>
+        {{t "contribute_on_github"}}
+      </a>
     </pzsh-footer-link>
   </div>
 
