Fix ci frontend

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -15,12 +15,7 @@
 </pzsh-topbar>
 
 <pzsh-banner>
-  <!-- prettier-ignore -->
-  <svg slot="tangram" xmlns="http://www.w3.org/2000/svg" width="95" height="100" fill="none">
-    <path fill="#2C97A6" fill-rule="evenodd" d="M95 0v66.7L61.7 33.3 95 0z" clip-rule="evenodd"/>
-    <path fill="#3B7BBE" fill-rule="evenodd" d="M47.9 47.1L.7 0H95L47.9 47.1z" clip-rule="evenodd"/>
-    <path fill="#69B978" d="M61.635 33.367L28.331 66.671l33.304 33.305L94.939 66.67 61.635 33.367z"/>
-  </svg>
+  <img slot="tangram" width="95" height="100" src="/assets/images/tangram.svg" alt="tangram">
   <div slot="content" class="search">
     <div class="search-field">
       <Input @class="search" @type="search"
