--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -1,8 +1,4 @@
 <div class="pt-3 mb-3">
-  <LinkTo @route="index">
-    <span class="btn btn-secondary admin-back-button" role="button">
-      <img class="icon-button account-show-back" src="/assets/images/arrow-left.svg" alt="back">
-    </span>
-  </LinkTo>
+  <IndexButton></IndexButton>
   {{outlet}}
 </div>
