--- a/frontend/app/templates/components/admin/user/table-row.hbs
+++ b/frontend/app/templates/components/admin/user/table-row.hbs
@@ -35,7 +35,7 @@
     {{/if}}
     {{#if @user.locked}} 
       <span role="button" {{on "click" (fn this.toggleLocked @user)}}>
-        <img class="icon-medium-button d-inline" src="/assets/images/encrypted_small.svg" alt="locked"> <!-- css farb endern frontend specs-->
+        <img class="icon-medium-button d-inline" src="/assets/images/encrypted_small.svg" alt="locked">
       </span>
     {{/if}}
   </td>
