--- a/frontend/app/templates/components/api-user/table.hbs
+++ b/frontend/app/templates/components/api-user/table.hbs
@@ -13,7 +13,7 @@
 </div>
 
 {{#if @apiUsers}}
-  <table class="table table-striped mt-20">
+  <table class="table table-striped mt-20 mb-15">
     <tbody>
       <tr>
         <th> {{t "username"}} </th>
