--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -7,6 +7,7 @@
     <h2 slot="slogan">{{t "slogan"}}</h2>
     <img src="/assets/images/cryptopussy.svg" slot="logo" width="99" height="126">
   </pzsh-hero>
+  {{outlet}}
 {{else}}
   <div class="content">
     {{#if this.navService.showSideNavBar}}
