--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -5,7 +5,7 @@
   <pzsh-hero>
     <h1 slot="title">Puzzle Cryptopus</h1>
     <h2 slot="slogan">{{t "slogan"}}</h2>
-    <img src="/assets/images/cryptopussy.svg" slot="logo" width="99" height="126">
+    <img src="/assets/images/cryptopussy.svg" alt="Cryptopus logo" slot="logo" width="99" height="126">
   </pzsh-hero>
   {{outlet}}
 {{else}}
