--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -296,9 +296,7 @@ li a {
 .columns li {
   width: 32%;
   display: inline-block;
-  padding: 3px;
-  padding-left: 8px;
-  padding-top: 5px;
+  padding: 5px 3px 3px 8px;
   margin-bottom: 4px;
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
