Alter backend, change api users table and add migration

--- a/frontend/app/templates/components/api-user/table.hbs
+++ b/frontend/app/templates/components/api-user/table.hbs
@@ -22,6 +22,7 @@
         <th> {{t "profile.api_users.valid_for"}} </th>
         <th> {{t "profile.api_users.last_login"}} </th>
         <th> {{t "profile.api_users.locked"}} </th>
+        <th> Ccli default user </th>
         <th> {{t "actions"}} </th>
       </tr>
     </tbody>
