--- a/frontend/app/templates/components/api-user/table-row.hbs
+++ b/frontend/app/templates/components/api-user/table-row.hbs
@@ -16,9 +16,9 @@
       {{t validityTime.label}}
     </PowerSelect>
   </td>
-  <td> 
+  <td>
     {{#if @apiUser.lastLoginAt}}
-      {{t "profile.api_users.at"}} {{moment-format @apiUser.lastLoginAt "DD.MM.YYYY hh:mm"}} 
+      {{t "profile.api_users.at"}} {{moment-format @apiUser.lastLoginAt "DD.MM.YYYY hh:mm"}}
     {{/if}}
     {{#if @apiUser.lastLoginFrom}}
       <br> {{t "profile.api_users.from"}} {{@apiUser.lastLoginFrom}}
@@ -26,6 +26,9 @@
   </td>
   <td>
     <XToggle @theme="material" @value={{@apiUser.locked}} @onToggle={{fn this.toggleApiUser @apiUser}} />
+  </td>
+  <td>
+    <XToggle @theme="material" @value={{this.isDefaultCcliUser}} @onToggle={{fn this.setDefaultCcliUser @apiUser}} />
   </td>
   <td>
     <a role="button" {{on "click" (fn this.renewApiUser @apiUser)}}><img src="/assets/images/refresh.svg" alt="refresh" class="icon-button"></a>
