--- a/frontend/app/templates/components/api-user/table-row.hbs
+++ b/frontend/app/templates/components/api-user/table-row.hbs
@@ -27,9 +27,11 @@
   <td>
     <XToggle @theme="material" @value={{@apiUser.locked}} @onToggle={{fn this.toggleApiUser @apiUser}} />
   </td>
-  <td>
-    <XToggle @theme="material" @value={{this.isDefaultCcliUser}} @onToggle={{fn this.setDefaultCcliUser @apiUser}} />
-  </td>
+  {{#if this.args.parent.isAdminAndNotRoot}}
+    <td>
+      <XToggle @theme="material" @value={{this.isDefaultCcliUser}} @onToggle={{fn this.setDefaultCcliUser @apiUser}} />
+    </td>
+  {{/if}}
   <td>
     <a role="button" {{on "click" (fn this.renewApiUser @apiUser)}}><img src="/assets/images/refresh.svg" alt="refresh" class="icon-button"></a>
     <DeleteWithConfirmation @class="" @record={{@apiUser}}>
