--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -97,6 +97,10 @@
           <pzsh-icon name="setting"></pzsh-icon>
           {{ t "profile_title" }}
         </LinkTo>
+        <pzsh-menu-dropdown-item role="button" {{on "click" (fn this.copyCcliLogin @apiUser)}}>
+          <pzsh-icon src="/assets/images/clipboard.svg" alt="clipboard" class="icon-button"></pzsh-icon>
+          {{ t "flashes.api.api-users.ccli_login.tooltip" }}
+        </pzsh-menu-dropdown-item>
         <pzsh-menu-dropdown-item href="/session/destroy">
           <pzsh-icon name="sign-out-alt"></pzsh-icon>
           {{ t "logout" }}
