--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -10,7 +10,7 @@
 
 <pzsh-topbar>
   <LinkTo @route="index" class="cryptopus-logo">
-    <img width="214" height="32" src="/assets/images/cryptopus-logo.svg" alt="cryptopus logo">
+      <img src="/assets/images/cryptopus-logo.svg" alt="cryptopus logo">
   </LinkTo>
 </pzsh-topbar>
 
@@ -84,8 +84,6 @@
         </div>
       </pzsh-menu-dropdown>
     {{/if}}
-
-
 
     <pzsh-menu-dropdown>
       <div slot="toggle">
