--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -134,6 +134,10 @@
     display: flex;
     margin-left: 0;
   }
+
+  .content {
+    padding-bottom: 100px !important;
+  }
 }
 
 .cryptopus-logo {
