--- a/frontend/app/templates/components/api-user/table.hbs
+++ b/frontend/app/templates/components/api-user/table.hbs
@@ -22,6 +22,9 @@
         <th> {{t "profile.api_users.valid_for"}} </th>
         <th> {{t "profile.api_users.last_login"}} </th>
         <th> {{t "profile.api_users.locked"}} </th>
+        {{#if this.isAllowedToUpdateDefaultCcliUser }}
+          <th> {{t "profile.api_users.ccli_default_user"}} </th>
+        {{/if}}
         <th> {{t "actions"}} </th>
       </tr>
     </tbody>
