--- a/frontend/app/templates/components/account/show.hbs
+++ b/frontend/app/templates/components/account/show.hbs
@@ -26,11 +26,11 @@
   </div>
   <div class="row pb-3 justify-content-between">
     <div class="col-lg-9 accountname">
-      <h2 class="d-inline">{{t "accounts.show.account"}}: {{@account.accountname}}</h2>
+      <h2 class="d-inline">{{t "accounts.show.account"}}: {{@account.name}}</h2>
     </div>
     <div class="col-lg-9 accountname text-muted">
       <br><p class="d-inline">{{t "accounts.show.created_at"}}: {{moment-format @account.createdAt "DD.MM.YYYY hh:mm"}}</p>
-       / 
+       /
       <p class="d-inline">{{t "accounts.show.last_update"}}: {{moment-format @account.updatedAt "DD.MM.YYYY hh:mm"}}</p>
     </div>
   </div>
@@ -64,7 +64,7 @@
         <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
         </CopyButton>
-      </div> 
+      </div>
     {{/if}}
   </div>
   <div class="d-flex flex-row justify-content-between mb-2">
